--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,21 @@ section {
 
 .home-img img {
     width: 30vw;
+    animation: floatImage 4s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-2.4rem);
+    }
+
+    0% {
+        transform: translateY(0);
+    }
 }
 
 .home-content h3 {
